[tool.poetry]
name = "mario"
version = "11.2"
description = ""
authors = ["Alexander_Levkin <levkin.alexan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.1"
scipy = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
